--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Simple HTTP crud API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json && webpack --config ./webpack.config.js",
+    "test": "jest --testPathPattern=__tests__",
+    "start:dev": "NODE_ENV=development nodemon --exec ts-node index.ts",
+    "start:prod": "NODE_ENV=production node ./bundle/index.js",
+    "start:multi": "NODE_ENV=development nodemon --exec ts-node multi.ts"
   },
   "repository": {
     "type": "git",
