--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "win-node-env": "^0.6.1"
   },
   "homepage": "https://github.com/pyonic/simple_crud_api#readme"
 }
